fixed image carousel arrow visibility and text content

--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,7 @@ button:hover
     transition: 0.5s;
 }
 
-.main .project-area .grid .our-project > .title h4{
+.main .project-area h4{
     font: normal 700 25px/25px var(--roboto);
 }
 @media screen and (min-device-width: 1201px) {
@@ -349,6 +349,7 @@ button:hover
     font: normal 700 25px/25px var(--roboto);
 }
 .modal .btn {
+    font-family: var(--roboto);
     font-weight: 500;
 }
 .modal p,
@@ -361,17 +362,70 @@ button:hover
 }
 
 .modal .carousel{
-    margin: 1rem 0;
+    margin: 1rem 1rem;
 }
 .modal .carousel img{
-    max-height: 27rem;
+    max-height: 40rem;
 }
 
-.modal .carousel-control-prev, 
-.modal  .carousel-control-next{
-    opacity: .9;
-    top: 50%;
-    bottom: 50%;
+@media screen and (min-device-width: 992px) {
+    .carousel-control-next-icon{
+        width: 2rem;
+        height: 2rem;
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+    }
+    .carousel-control-prev-icon{
+        width: 2rem;
+        height: 2rem;
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+    }
+    .modal  .carousel-control-next{
+        background-color: rgba(255, 255, 255, 0.548);
+        width: fit-content;
+        height: fit-content;
+        top: 50%;
+        bottom: 50%;
+        padding: 1rem;
+    }
+    .modal .carousel-control-prev{
+        background-color: rgba(255, 255, 255, 0.548);
+        width: fit-content;
+        height: fit-content;
+        top: 50%;
+        bottom: 50%;
+        padding: 1rem;
+    }
+}
+
+@media screen and (max-device-width: 991px) {
+    .carousel-control-next-icon{
+        width: 1rem;
+        height: 1rem;
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+    }
+    .carousel-control-prev-icon{
+        width: 1rem;
+        height: 1rem;
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+    }
+    .modal  .carousel-control-next{
+        background-color: rgba(255, 255, 255, 0.548);
+        width: fit-content;
+        height: fit-content;
+        top: 50%;
+        bottom: 50%;
+        transform: translateY(-50%);
+        padding: 0.7rem;
+    }
+    .modal .carousel-control-prev{
+        background-color: rgba(255, 255, 255, 0.548);
+        width: fit-content;
+        height: fit-content;
+        top: 50%;
+        bottom: 50%;
+        transform: translateY(-50%);
+        padding: 0.7rem;
+    }
 }
 
 .modal .carousel-control-prev:hover, 
